Pygments changelog
==================

Version 1.1
-----------
(codename not selected, released XXX YY, 2009)

- Lexers added:

  * Antlr/Ragel, thanks to Ana Nelson
  * (Ba)sh shell
  * Erlang shell
  * GLSL
  * Prolog
  * Evoque
  * Modelica
  * Rebol
  * MXML
  * Cython

- Add "anchorlinenos" option to HTML formatter.

- Support multiline strings in Lua lexer.

- When pygmentize is asked to highlight a file for which multiple lexers
  match the filename, use the analyse_text guessing engine to determine the
  winner (#355).

- Fix minor bugs in the JavaScript lexer (#383), the Matlab lexer (#378),
  the Scala lexer (#392), the INI lexer (#391), the Clojure lexer (#387)
  and the AS3 lexer (#389).

- Fix a Perl heredoc bug (#729).

- Fix a bug in the image formatter which misdetected lines (#380).

- Fix a bug lexing extended Ruby strings.

- Fix a bug when lexing git diffs.


Version 1.0
-----------
(codename Dreiundzwanzig, released Nov 23, 2008)

- Don't use join(splitlines()) when converting newlines to ``\n``,
  because that doesn't keep all newlines at the end when the
  ``stripnl`` lexer option is False.

- Add ``-N`` option to command-line interface to get a lexer name
  for a given filename.

- Add Tango style, written by Andre Roberge for the Crunchy project.

- Add Python3TracebackLexer and ``python3`` option to 
  PythonConsoleLexer.

- Fix a few bugs in the Haskell lexer.

- Fix PythonTracebackLexer to be able to recognize SyntaxError and
  KeyboardInterrupt (#360).

- Provide one formatter class per image format, so that surprises like::

    pygmentize -f gif -o foo.gif foo.py

  creating a PNG file are avoided.

- Actually use the `font_size` option of the image formatter.

- Fixed numpy lexer that it doesn't listen for `*.py` any longer.

- Fixed HTML formatter so that text options can be Unicode
  strings (#371).

- Unified Diff lexer supports the "udiff" alias now.

- Fix a few issues in Scala lexer (#367).
