@@ -18,6 +18,9 @@ Version 1.1
   * MXML
   * Cython
 
+- Fix the LaTeX formatter's output so that output generated for one style
+  can be used with the style definitions of another (#384).
+
 - Add "anchorlinenos" option to HTML formatter.
 
 - Support multiline strings in Lua lexer.
